# rippope

./: .gitignore  CMAKE.md  CMakeLists.txt  README.md  build.sh  highlight.c  main.c  piece_table.c  piece_table.h  todo.md
clay_utils/: clay_renderer_raylib.c  clay_renderer_raylib.h
src/: main.c  piece_table.c
src/clay_utils/: clay_renderer_raylib.c
src/tests/: CMakeLists.txt  main.c
tests/: .gdbinit  CMakeLists.txt  a.out  main.c  test.txt
